test/compile-fail/resolution/use/ambiguous-entry-child/top.rhdl
mod a {
    pub mod b {}
}
mod a {
    pub mod b {}
}

use a::b;
